--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,6 +8,9 @@
     list-style-type: none;
     text-decoration: none;
 }
+html{
+    scroll-behavior:smooth ;
+}
 
 header{
     width: 100%;
@@ -104,10 +107,10 @@ h1{
     max-width: 100%;
     display: block;
     float: left;
-    max-height: 100%;
+    height: 100%;
     margin-left: 6.4rem;
     margin-bottom: 2rem;
-    position: absolute;
+    position: relative;
     line-height: 2rem;
 }
 .catalogo-item{
@@ -116,7 +119,7 @@ h1{
     text-align: center;
     border: 2px outset #f2f2f2;
     border-radius: .2rem;
-    margin: 1.8rem 2.4rem
+    margin: 1.5rem 2.4rem
 }
 .lazy-img{
     height: 16rem;
@@ -129,12 +132,13 @@ h1{
     opacity: 0;
     max-width: 100%;
     max-height: 100%;
-    object-fit: cover;
+    
 }
 .lazy-img img.loaded{
     opacity: 1;
     transition: opacity 2s;
 }
+
 .catalogo-item h3{
     font-family: "Noto Sans",serif;
     text-transform: uppercase;
@@ -171,4 +175,112 @@ h1{
 .catalogo-item h3:hover{
     color: midnightblue;
     opacity: .9;
+}
+
+footer{
+    width: 100%;
+    height: 50px;
+    
+    display: table;
+    background: #4b6cb7; 
+    background: -webkit-linear-gradient(to right, #182848, #4b6cb7); 
+    background: linear-gradient(to right, midnightblue, #4b6cb7); 
+}
+.conteudo-sobre{
+    width: 30%;
+    float: left;
+    display: block;
+    position: relative;
+    padding-left: 8.5rem;
+    padding-right: 2rem;
+    padding-bottom: 2rem;
+}
+.conteudo-sobre h3{
+    font-family: "Yanone Kaffeesatz", serif;
+    font-size: 1.8rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding-bottom: 1rem;
+    padding-top: 2rem;
+    border-bottom: 2px solid black;
+    display: block;
+    margin-block-start: .4rem;
+    margin-block-end: .5rem;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+}
+.conteudo-sobre p{
+    font-weight: normal;
+    font-size: 1.1rem;
+    display: block;
+}
+.conteudo-pagamento{
+    width: 100%;
+    display: block;
+   
+}
+.conteudo-pagamento h3{
+    font-family: "Yanone Kaffeesatz", serif;
+    font-size: 1.8rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding-top: 2.4rem;
+   padding-bottom: 1rem;
+    margin-block-start: .1rem;
+    margin-block-end: 0;
+    margin-inline-start: 3rem;
+    margin-inline-end: 0;
+    float: left;
+    border-bottom: 2px solid black;
+    display: block;
+}
+.img-pagamento{
+    max-width: 100%;
+    margin-bottom: 2rem;
+    float: left;
+    margin-block-start: 6.8rem;
+    margin-block-end: .3rem;
+    margin-inline-start: 0;
+    margin-inline-end: 6rem;
+    margin-left: -11rem;
+}
+.img-pagamento img{
+    width: 3rem;
+    height: 2rem;
+}
+.conteudo-redes{
+    width: 25%;
+    float: left;
+    padding-left: 4rem;
+    display: block;
+    padding-bottom: 2rem;
+}
+.conteudo-redes h3{
+    font-family: "Yanone Kaffeesatz", serif;
+    font-size: 1.8rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding-top: 2.2rem;
+    padding-bottom: 1.2rem;
+    border-bottom: 2px solid black;
+    display: block;
+    margin-block-start: 0;
+    margin-block-end:0;
+    margin-inline-start:.6rem;
+    margin-inline-end:1rem;
+    
+}
+.conteudo-redes i{
+    width: 30%;
+    font-size: 1.6rem;
+    text-align: center;
+    margin-block-start: 1rem;
+    margin-block-end:0;
+    float: left;
+    cursor: pointer;
+}
+.conteudo-direitos{
+ text-align: right;
+ margin-inline-end: 2rem;
+ letter-spacing: .1rem;
 }
