--- a/css/estilo.css
+++ b/css/estilo.css
@@ -426,9 +426,10 @@ footer{
         padding: 0;
     }
     .info{
-        font-size: .8rem;
+        display: block;
+        font-size: 1rem;
         margin-left: 3rem;
-        padding: .5rem;
+        padding: .8rem;
         margin-bottom: 1.4rem;
     }
     .info .fas{
